besu/ingress/k8s-backups/20250703-074955/ingressroutes-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin1-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin1.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node1","port":8548}]}],"tls":{"secretName":"paladin1-tls"}}}
    creationTimestamp: "2025-07-03T10:46:08Z"
    generation: 1
    name: paladin1-ui-ingress
    namespace: paladin
    resourceVersion: "38316384"
    uid: 113ce1ee-177e-459f-a841-3cba411a3695
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin1.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node1
        port: 8548
    tls:
      secretName: paladin1-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin2-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin2.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node2","port":8548}]}],"tls":{"secretName":"paladin2-tls"}}}
    creationTimestamp: "2025-07-03T10:46:09Z"
    generation: 1
    name: paladin2-ui-ingress
    namespace: paladin
    resourceVersion: "38316426"
    uid: 088549ab-9b38-40b2-b15f-8eefe7ee27d0
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin2.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node2
        port: 8548
    tls:
      secretName: paladin2-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"paladin3-ui-ingress","namespace":"paladin"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin3.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node3","port":8548}]}],"tls":{"secretName":"paladin3-tls"}}}
    creationTimestamp: "2025-07-03T10:46:10Z"
    generation: 1
    name: paladin3-ui-ingress
    namespace: paladin
    resourceVersion: "38316476"
    uid: b492eb0b-f497-465c-983e-adf5375bcee8
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin3.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node3
        port: 8548
    tls:
      secretName: paladin3-tls
kind: List
metadata:
  resourceVersion: ""
