besu/ingress/k8s-backups/20250703-074955/middlewares-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"basic-auth","namespace":"paladin"},"spec":{"basicAuth":{"secret":"my-basic-auth-secret"}}}
    creationTimestamp: "2025-07-03T10:46:11Z"
    generation: 1
    name: basic-auth
    namespace: paladin
    resourceVersion: "38316483"
    uid: b70cd14f-6fe9-4186-a925-4b0aea5d5106
  spec:
    basicAuth:
      secret: my-basic-auth-secret
kind: List
metadata:
  resourceVersion: ""
