besu/ingress/k8s-backups/20250703-074955/services-backup.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31547,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":30665,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":30665,"protocol":"UDP","serviceName":"paladin:besu-node1","allNodes":true},{"port":31545,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true},{"port":31546,"protocol":"TCP","serviceName":"paladin:besu-node1","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:39Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: besu-node1
      app.kubernetes.io/part-of: paladin
    name: besu-node1
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node1
      uid: 25a08da6-0d43-4ff0-a3a7-884e82a8f654
    resourceVersion: "38313912"
    uid: 30745c7e-2172-4a62-a116-7e249446fd1f
  spec:
    clusterIP: 10.43.202.37
    clusterIPs:
    - 10.43.202.37
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31547
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 30665
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 30665
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31545
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31546
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: besu-node1
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31647,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":32617,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":32617,"protocol":"UDP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31645,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true},{"port":31646,"protocol":"TCP","serviceName":"paladin:besu-node2","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:38Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: besu-node2
      app.kubernetes.io/part-of: paladin
    name: besu-node2
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node2
      uid: b78298e2-4cd9-4afb-b56e-33136266d98d
    resourceVersion: "38313810"
    uid: 847825ae-3e9e-4ea9-a2ad-d262285d7425
  spec:
    clusterIP: 10.43.9.160
    clusterIPs:
    - 10.43.9.160
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31647
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 32617
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 32617
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31645
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31646
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: besu-node2
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31747,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31479,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31479,"protocol":"UDP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31745,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true},{"port":31746,"protocol":"TCP","serviceName":"paladin:besu-node3","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:39Z"
    labels:
      app: besu
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: besu-node3
      app.kubernetes.io/part-of: paladin
    name: besu-node3
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Besu
      name: node3
      uid: c87cb3c1-5238-4c4b-89ca-96e016447691
    resourceVersion: "38313864"
    uid: 30a20241-f549-4702-9db4-75175dc18722
  spec:
    clusterIP: 10.43.232.37
    clusterIPs:
    - 10.43.232.37
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: graphql-http
      nodePort: 31747
      port: 8547
      protocol: TCP
      targetPort: 8547
    - name: p2p-tcp
      nodePort: 31479
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: p2p-udp
      nodePort: 31479
      port: 30303
      protocol: UDP
      targetPort: 30303
    - name: rpc-http
      nodePort: 31745
      port: 8545
      protocol: TCP
      targetPort: 8545
    - name: rpc-ws
      nodePort: 31746
      port: 8546
      protocol: TCP
      targetPort: 8546
    selector:
      app: besu
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: besu-node3
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31548,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true},{"port":31549,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true},{"port":32347,"protocol":"TCP","serviceName":"paladin:paladin-node1","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:37Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: paladin-node1
      app.kubernetes.io/part-of: paladin
    name: paladin-node1
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node1
      uid: dd3044cd-cad1-46b7-8f5d-55b917e50b55
    resourceVersion: "38313758"
    uid: babc087d-ade7-46cc-9d25-8ee23391564d
  spec:
    clusterIP: 10.43.147.19
    clusterIPs:
    - 10.43.147.19
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31548
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31549
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 32347
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node1
      app.kubernetes.io/name: paladin-node1
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31648,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true},{"port":31649,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true},{"port":31412,"protocol":"TCP","serviceName":"paladin:paladin-node2","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:37Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: paladin-node2
      app.kubernetes.io/part-of: paladin
    name: paladin-node2
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node2
      uid: bfc22fc7-db64-4942-bc02-a55c581a25f3
    resourceVersion: "38313742"
    uid: bc700431-189b-450f-baa7-b5316b0a1cd5
  spec:
    clusterIP: 10.43.240.64
    clusterIPs:
    - 10.43.240.64
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31648
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31649
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 31412
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node2
      app.kubernetes.io/name: paladin-node2
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31748,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true},{"port":31749,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true},{"port":31279,"protocol":"TCP","serviceName":"paladin:paladin-node3","allNodes":true}]'
    creationTimestamp: "2025-07-03T10:41:38Z"
    labels:
      app: paladin
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: paladin-node3
      app.kubernetes.io/part-of: paladin
    name: paladin-node3
    namespace: paladin
    ownerReferences:
    - apiVersion: core.paladin.io/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Paladin
      name: node3
      uid: d638c11f-aa3e-4eb4-a24a-7264b296579f
    resourceVersion: "38313819"
    uid: 6960e7f6-d79a-4461-8ab8-c5aeafa71dd2
  spec:
    clusterIP: 10.43.129.107
    clusterIPs:
    - 10.43.129.107
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: rpc-http
      nodePort: 31748
      port: 8548
      protocol: TCP
      targetPort: 8548
    - name: rpc-ws
      nodePort: 31749
      port: 8549
      protocol: TCP
      targetPort: 8549
    - name: transport-grpc
      nodePort: 31279
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: paladin
      app.kubernetes.io/instance: node3
      app.kubernetes.io/name: paladin-node3
      app.kubernetes.io/part-of: paladin
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: paladin
      meta.helm.sh/release-namespace: paladin
    creationTimestamp: "2025-07-03T10:41:33Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: paladin-operator
    namespace: paladin
    resourceVersion: "38313606"
    uid: 123bf6f4-94d3-4b82-9e51-387773c39953
  spec:
    clusterIP: 10.43.178.143
    clusterIPs:
    - 10.43.178.143
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/name: paladin-operator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
